--- a/www/charts.html
+++ b/www/charts.html
@@ -11,17 +11,32 @@
         <select ng-model="histogramTime" ng-options="time.name for time in histogramTimes" ng-change="updateHistogramTime(histogramTime)">
         </select>
 
-        <h3>Feeding time by hour</h3>
+        <h3>Feeding times by hour</h3>
         <p>This chart shows the accumulated number of feedings per hour for the last {{histogramTime.key}} days. It's interesting.</p>
         <p ng-show="histogramPeakTimes() > 2">You fed your baby <strong>{{histogramPeakTimes()}} times</strong> at around <strong>{{histogramPeakHour()}} o'clock</strong>. That was you max.</p>
-      </ion-slide>  
+      </ion-slide>
+
       <ion-slide> 
         <canvas id="myPercentage"></canvas>
         <select ng-model="percentageTime" ng-options="time.name for time in percentageTimes" ng-change="updatePercentageTime(percentageTime)">
         </select>
         <h3>Feeding trends</h3>
-        <p>Feedings by source. You see <span class="leftColor">left breast</span>, <span class="rightColor">right breast</span> and <span class="bottleColor">bottle feedings</span> per day.</p>
-        <p>At the begining of the period it was <span class="leftColor">{{percentageBeginDistro('L')}}</span> and <span class="rightColor">{{percentageBeginDistro('R')}}</span> feedings a day per left and right breast, and <span class="bottleColor">{{percentageBeginDistro('B')}}</span> bottle feedings. Now it's <span class="leftColor">{{percentageEndDistro('L')}}</span> left and <span class="rightColor">{{percentageEndDistro('R')}}</span> right breast with <span class="bottleColor">{{percentageEndDistro('B')}}</span> bottle feedings.</p>
+        <p>This chart shows the number of feedings by source. You see <span class="leftColor">left breast</span>, <span class="rightColor">right breast</span> and <span class="bottleColor">bottle feedings</span> per day.</p>
+        
+        <hr>
+        <div class="percentageContent">
+          <div class="percentageHead">Today</div>
+          <span class="tag"><span class="leftColor">{{percentageEndDistro('L')}}</span>left</span>
+          <span class="tag"><span class="bottleColor">{{percentageEndDistro('B')}}</span>bottle</span>
+          <span class="tag"><span class="rightColor">{{percentageEndDistro('R')}}</span>right</span>
+        </div>
+        <div class="percentageContent" ng-show="percentageHasDataAtBegin()">
+          <div class="percentageHead">{{percentageTime.name}} ago</div>
+          <span class="tag"><span class="leftColor">{{percentageBeginDistro('L')}}</span>left</span>
+          <span class="tag"><span class="bottleColor">{{percentageBeginDistro('B')}}</span>bottle</span>
+          <span class="tag"><span class="rightColor">{{percentageBeginDistro('R')}}</span>right</span>
+        </div>
+
       </ion-slide>
     </ion-slide-box>
 
