--- a/www/charts.html
+++ b/www/charts.html
@@ -12,7 +12,7 @@
         </select>
 
         <h3>Feeding times by hour</h3>
-        <p>This chart shows the accumulated number of feedings per hour for the last {{histogramTime.key}} days. It's interesting.</p>
+        <p class="chartDescText">This chart shows the accumulated number of feedings per hour for the last {{histogramTime.key}} days. It's interesting.</p>
 
         <hr>
         <div class="chartDescContent">
@@ -30,7 +30,7 @@
         <select ng-model="percentageTime" ng-options="time.name for time in percentageTimes" ng-change="updatePercentageTime(percentageTime)">
         </select>
         <h3>Feeding trends</h3>
-        <p>This chart shows the number of feedings by source. You see <span class="leftColor">left breast</span>, <span class="rightColor">right breast</span> and <span class="bottleColor">bottle feedings</span> per day.</p>
+        <p class="chartDescText">This chart shows the number of feedings by source. You see <span class="leftColor">left breast</span>, <span class="rightColor">right breast</span> and <span class="bottleColor">bottle feedings</span> per day.</p>
         
         <hr>
         <div class="chartDescContent">
