--- a/www/editFeeding.html
+++ b/www/editFeeding.html
@@ -37,7 +37,8 @@
     <div class="range"><input type="range" min="0" max="30" value="{{editedFeedingModel.duration}}" ng-model="editedFeedingModel.duration"></div>
   </div>
 
-
-  <button class="button button-block button-round" ng-click="deleteEditedFeeding()">Delete</button>
+  <div class="deleteButtonContainer">
+    <button class="button button-block button-round" ng-click="deleteEditedFeeding()">Delete</button>
+  </div>
 
 </div>
