Calling it statistics

--- a/www/charts.html
+++ b/www/charts.html
@@ -1,6 +1,6 @@
 <div class="modal">
   <ion-header-bar>
-    <h1 class="title">Charts</h1>
+    <h1 class="title">Statistics</h1>
   </ion-header-bar>
   <ion-content ng-controller="ChartsController" id="ChartsController" class="Charts">
 
