Moved controllers to their own files.

--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,9 @@
     <script src="js/config.js"></script>
     <script src="js/protos.js"></script>
     <script src="js/model.js"></script>
+    <script src="js/menuController.js"></script>
+    <script src="js/counterController.js"></script>
+    <script src="js/listController.js"></script>
     <script src="js/chartsController.js"></script>
     <script src="js/app.js"></script>
     <script src="js/chartData.js"></script>
@@ -52,10 +55,6 @@
             <img id="infoArrowLeft" src="img/infoArrowLeft.png">
             <img id="infoArrowBottle" src="img/infoArrowBottle.png">
             <img id="infoArrowRight" src="img/infoArrowRight.png">
-  <!--           <div id="infoTextLeft">left breast</div>
-            <div id="infoTextBottle">bottle</div>
-            <div id="infoTextRight">right breast</div>
-   -->          <!-- <div id="infoStartFeeding">start feeding</div> -->
             <img id="infoStartFeeding" src="img/infoStartFeeding.png">
             <img id="infoTextLeft" src="img/infoTextLeft.png">
             <img id="infoTextBottle" src="img/infoTextBottle.png">
