--- a/www/charts.html
+++ b/www/charts.html
@@ -7,12 +7,14 @@
 
     <ion-slide-box on-slide-changed="slideHasChanged($index)" show-pager="true" active-slide="activeSlide">
       <ion-slide> 
-        <canvas id="myHistogram"></canvas>
-        <select ng-model="histogramTime" ng-options="time.name for time in histogramTimes" ng-change="updateHistogramTime(histogramTime)">
-        </select>
+        <div class="ChartAndTitle">
+          <canvas id="myHistogram"></canvas>
+          <select ng-model="histogramTime" ng-options="time.name for time in histogramTimes" ng-change="updateHistogramTime(histogramTime)">
+          </select>
 
-        <h3>Feeding times by hour</h3>
-        <p class="chartDescText">This chart shows the accumulated number of feedings per hour for the last {{histogramTime.key}} days. It's interesting.</p>
+          <h3>Feeding times by hour</h3>
+          <p class="chartDescText">This chart shows the accumulated number of feedings per hour for the last {{histogramTime.key}} days. It's interesting.</p>
+        </div>
 
         <hr>
         <div class="chartDescContent">
@@ -26,11 +28,13 @@
       </ion-slide>
 
       <ion-slide> 
-        <canvas id="myPercentage"></canvas>
-        <select ng-model="percentageTime" ng-options="time.name for time in percentageTimes" ng-change="updatePercentageTime(percentageTime)">
-        </select>
-        <h3>Feeding trends</h3>
-        <p class="chartDescText">This chart shows the number of feedings by source. You see <span class="leftColor">left breast</span>, <span class="rightColor">right breast</span> and <span class="bottleColor">bottle feedings</span> per day.</p>
+        <div class="ChartAndTitle">
+          <canvas id="myPercentage"></canvas>
+          <select ng-model="percentageTime" ng-options="time.name for time in percentageTimes" ng-change="updatePercentageTime(percentageTime)">
+          </select>
+          <h3>Feeding trends</h3>
+          <p class="chartDescText">This chart shows the number of feedings by source. You see <span class="leftColor">left breast</span>, <span class="rightColor">right breast</span> and <span class="bottleColor">bottle feedings</span> per day.</p>
+        </div>
         
         <hr>
         <div class="chartDescContent">
