Nof day for scattegraph from dropdown

--- a/www/charts.html
+++ b/www/charts.html
@@ -27,7 +27,7 @@
           </div>
 
           <div class="SelectWorkaround">
-            <select ng-model="histogramTime" ng-options="time.name for time in histogramTimes" ng-change="updateHistogramTime(histogramTime)">
+            <select ng-model="spreadTime" ng-options="time.name for time in spreadTimes" ng-change="updateSpreadTime(spreadTime)">
             </select>
             <i class="ion-android-dropdown"></i>
           </div>
