--- a/www/charts.html
+++ b/www/charts.html
@@ -32,11 +32,13 @@
             </select>
             <i class="ion-android-dropdown"></i>
           </div>
+
         </div>
 
         <hr>
         <div class="chartDescContent">
-
+          <h3>Times of feeding by day</h3>
+          <p class="chartDescText">Shows each feeding by day and time. Size of dot represents feeding magnitude. Follow the horizontal lines to try and figure out what times of day your baby is feeding the most.</p>
         </div>
       </ion-slide>
 
