Some silly styling and more desc

--- a/www/charts.html
+++ b/www/charts.html
@@ -33,12 +33,13 @@
             <i class="ion-android-dropdown"></i>
           </div>
 
+          <h3>Times of feeding by day</h3>
+
         </div>
 
         <hr>
         <div class="chartDescContent">
-          <h3>Times of feeding by day</h3>
-          <p class="chartDescText">Shows each feeding by day and time. Size of dot represents feeding magnitude. Follow the horizontal lines to try and figure out what times of day your baby is feeding the most.</p>
+          <p class="chartDescText">Shows each feeding by day and time. Size of dot represents feeding magnitude. Follow the horizontal lines to try and figure out what times of day your baby is feeding the most. Today is on the rightmost edge.</p>
         </div>
       </ion-slide>
 
