--- a/www/charts.html
+++ b/www/charts.html
@@ -34,12 +34,16 @@
           </div>
 
           <h3>Times of feeding by day</h3>
+          <p class="chartDescText">Shows each feeding by day and time. Follow the horizontal lines to try and figure out what times of day your baby is feeding the most. Today is on the rightmost edge.</p>
 
         </div>
 
         <hr>
         <div class="chartDescContent">
-          <p class="chartDescText">Shows each feeding by day and time. Size of dot represents feeding magnitude. Follow the horizontal lines to try and figure out what times of day your baby is feeding the most. Today is on the rightmost edge.</p>
+          <div class="chartDescHead">Legend</div>
+          <div class="chartDescText">
+            Feeding sizes represented as balls. It ranges from <div class="Blobb Legend LegendMin"></div>, which is 0 minutes or 0 ml, to <div class="Blobb Legend LegendMax"></div> which is 30 minutes, 300ml or over.
+          </div>
         </div>
       </ion-slide>
 
