--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title>Ionic Baby Feeder</title>
 
+    <script src="lib/pikaday/pikaday.js"></script>
+    <link href="lib/pikaday/css/pikaday.css" rel="stylesheet">
+
+
+
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/editFeeding.css" rel="stylesheet">
