--- a/www/index.html
+++ b/www/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title>Ionic Baby Feeder</title>
 
-    <script src="lib/pikaday/pikaday.js"></script>
-    <link href="lib/pikaday/css/pikaday.css" rel="stylesheet">
+    <script src="lib/pikaday-time/pikaday.js"></script>
+    <link href="lib/pikaday-time/css/pikaday.css" rel="stylesheet">
 
 
 
