Updated copyright date

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <p>Built using <a href="http://ionicframework.com/">Ionic framework</a>.</p>
           <p>Special thanks to <a href="http://docs.phonegap.com/en/3.4.0/index.html">Cordova / PhoneGap</a>, <a href="http://github.com">Github</a></dt> and <a href="http://heroku.com/">Heroku</a>
           </p>
-          <p>Ionic feeder is maintained by <a href="https://github.com/zoomix">zoomix</a>. &copy;2014.</p>
+          <p>Ionic baby feeder is maintained by <a href="https://github.com/zoomix">zoomix</a>. &copy;2015.</p>
         </footer>
 
         
