Close modal fix for ios and web. They don't have the back button do they..

--- a/www/charts.html
+++ b/www/charts.html
@@ -1,6 +1,7 @@
 <div class="modal">
   <ion-header-bar>
     <h1 class="title">Statistics</h1>
+    <div class="button button-clear" ng-click="chartsModal.hide()"><span class="icon ion-close"></span></div>
   </ion-header-bar>
   <ion-content ng-controller="ChartsController" id="ChartsController" class="Charts">
 
