--- a/www/connectDevices.html
+++ b/www/connectDevices.html
@@ -1,6 +1,7 @@
 <div class="modal">
   <ion-header-bar>
     <h1 class="title">Connect devices</h1>
+    <div class="button button-clear" ng-click="modal.hide()"><span class="icon ion-close"></span></div>
   </ion-header-bar>
   <ion-content class="limitedWidth">
 
