Make the www public

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <h1>Ionic Baby Feeder</h1>
           <h2>Track your baby's feeding habits.</h2>
           <a class="alpha button" href="https://play.google.com/store/apps/details?id=se.kvrgic.ionicfeeder">Download from Google play</a>
+          <a class="alpha button" href="www">Web version</a>
         </header>
 
         <section id="basics" class="odd">
