Browser error links to the page that should work

--- a/error_browser_support.html
+++ b/error_browser_support.html
@@ -34,7 +34,7 @@
           <div class="content">
             <p>For this app to work effectively it needs to store some data in your browser's database. Unfortunatelly - I can't seem to access your database.</p>
             <span class="bigger">😱</span></p>
-            <h3>It should work on Chrome or Safari though.. Maybe try one of them, yes?</h3>
+            <h3>It should work on Chrome or Safari though.. Maybe try <a href="http://zoomix.github.io/ionic_feeder/www">it on one of them</a>, yes?</h3>
           </div>
         </section>
 
