Now works on computers and iphones

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section id="sync" class="even">
           <div class="content">
           <h1>Syncs all your devices</h1>
-          <p>Use Ionic Baby Feeder on your phone, your tablet, your partner's phone or <strong>any Android device</strong>. They all sync.</p>
+          <p>Use Ionic Baby Feeder on your phone, your tablet, your partner's phone or <strong>any Android device</strong>. Now even a light version on iPhones and your computer(*). They all sync.</p>
           </div>
           <div class="img"></div>
         </section>
@@ -47,6 +47,7 @@
         </section>
 
         <footer>
+          <p>(*)Technically. Since it works on Chrome/Safari/Opera you can use the web-version and that will sync too.</p><br>
           <p>Built using <a href="http://ionicframework.com/">Ionic framework</a>.</p>
           <p>Special thanks to <a href="http://docs.phonegap.com/en/3.4.0/index.html">Cordova / PhoneGap</a>, <a href="http://github.com">Github</a></dt> and <a href="http://heroku.com/">Heroku</a>
           </p>
