Updated to ionic 1.0.0. Enabled native scroll... But does it work? No discernible fluency increase... =/

--- a/www/index.html
+++ b/www/index.html
@@ -53,7 +53,7 @@
 
     <!-- Center content -->
     <ion-side-menu-content>
-      <ion-content id="CounterApp" ng-controller="ListCtrl">
+      <ion-content id="CounterApp" ng-controller="ListCtrl" overflow-scroll=”true”>
 
         <div class="infoOverlay hidden {{showInfoOverlay ? 'forceVisible' : ''}}" 
           ng-show="showInfoOverlay">
