--- a/www/index.html
+++ b/www/index.html
@@ -53,7 +53,7 @@
 
     <!-- Center content -->
     <ion-side-menu-content>
-      <ion-content id="CounterApp" ng-controller="ListCtrl" overflow-scroll=”true”>
+      <ion-content id="CounterApp" ng-controller="ListCtrl">
 
         <div class="infoOverlay hidden {{showInfoOverlay ? 'forceVisible' : ''}}" 
           ng-show="showInfoOverlay">
