--- a/www/charts.html
+++ b/www/charts.html
@@ -23,13 +23,13 @@
         <hr>
         <div class="chartDescContent">
           <div class="chartDescHead">Today</div>
-          <span class="tag"><span class="leftColor">{{quantityEndDistro('L')}}</span>left</span>
-          <span class="tag"><span class="bottleColor">{{quantityEndDistro('B')}}</span>bottle</span>
+          <span class="tag"><span class="quantity leftColor">{{quantityEndDistro('Breast') | number:0}}</span>breast (min)</span>
+          <span class="tag"><span class="quantity bottleColor">{{quantityEndDistro('Bottle')}}</span>bottle (ml)</span>
         </div>
         <div class="chartDescContent" ng-show="quantityHasDataAtBegin()">
           <div class="chartDescHead">{{quantityTime.name}} ago</div>
-          <span class="tag"><span class="leftColor">{{quantityBeginDistro('L')}}</span>left</span>
-          <span class="tag"><span class="bottleColor">{{quantityBeginDistro('B')}}</span>bottle</span>
+          <span class="tag"><span class="quantity leftColor">{{quantityBeginDistro('Breast') | number:0}}</span>breast (min)</span>
+          <span class="tag"><span class="quantity bottleColor">{{quantityBeginDistro('Bottle')}}</span>bottle (ml)</span>
         </div>
 
       </ion-slide>
