--- a/www/index.html
+++ b/www/index.html
@@ -75,7 +75,7 @@
         <div class="counter" ng-controller="CounterCtrl">
           <button menu-toggle="left" class="button button-icon icon ion-navicon button-menu"></button>
           <div class="ongoing">
-            <span class="duration" ng-show="currentFeeding">{{currentFeeding.duration | date:'m:ss'}}</span>
+            <span class="duration" ng-show="currentFeeding">{{currentFeeding.duration | date:'m:ss':'UTC'}}</span>
             <span class="duration" ng-show="!currentFeeding">0:00</span>
           </div>
 
@@ -98,9 +98,9 @@
               </div>
               <div class="totals">
                 Total
-                <div class="left"  ><span class="supplier supplierL">L</span>{{getDailyTotal(feedingDay,'L')| date:'m'}}&nbsp;min</div>
+                <div class="left"  ><span class="supplier supplierL">L</span>{{getDailyTotal(feedingDay,'L')| number:0}}&nbsp;min</div>
                 <div class="bottle"><span class="supplier supplierB"><i class="ion-waterdrop"></i></span>{{getDailyTotal(feedingDay,'B')}}&nbsp;ml</div>
-                <div class="right" ><span class="supplier supplierR">R</span>{{getDailyTotal(feedingDay,'R')| date:'m'}}&nbsp;min</div>
+                <div class="right" ><span class="supplier supplierR">R</span>{{getDailyTotal(feedingDay,'R')| number:0}}&nbsp;min</div>
               </div>
               <div ng-show="feedingDay && feedingDay.length" ng-repeat="feeding in feedingDay"><ng-include src="'list.html'" /></div>
               <div ng-show="!feedingDay || !feedingDay.length" class="noFeedings">No feedings this day</div>
@@ -111,9 +111,9 @@
               <div class="day"><i class="ion-arrow-left-b" ng-show="feedingDays[feedingDays.length-2]"></i> Today</div>
               <div class="totals">
                 Total
-                <div class="left"  ><span class="supplier supplierL">L</span>{{getDailyTotal(feedingDays[feedingDays.length-1],'L')| date:'m'}}&nbsp;min</div>
+                <div class="left"  ><span class="supplier supplierL">L</span>{{getDailyTotal(feedingDays[feedingDays.length-1],'L')| number:0}}&nbsp;min</div>
                 <div class="bottle"><span class="supplier supplierB"><i class="ion-waterdrop"></i></span>{{getDailyTotal(feedingDays[feedingDays.length-1],'B')}}&nbsp;ml</div>
-                <div class="right" ><span class="supplier supplierR">R</span>{{getDailyTotal(feedingDays[feedingDays.length-1],'R')| date:'m'}}&nbsp;min</div>
+                <div class="right" ><span class="supplier supplierR">R</span>{{getDailyTotal(feedingDays[feedingDays.length-1],'R')| number:0}}&nbsp;min</div>
               </div>
               <div ng-show="mostRecentFinishedFeeding" class="times timeSinceLast" ng-show="timeSinceLast">
                 <span class="time">{{timeSinceLast}}</span>
